# refined-masher

./: .env.example  .gitignore  CLAUDE.md  FRAME_FORMAT.md  LICENSE  README.md  pyproject.toml
docs/: gemini-deep-think-prompt.md  initial-project-instructions.md
notebooks/: kaggle_submission.py
remash/: agent.py
remash/interoception/: state.py
remash/memory/: cross_level.py  episode.py  state_graph.py
remash/perception/: calibration.py  frame.py  objects.py  ui.py
remash/policy/: actor_critic.py  base.py  efe.py  explorer.py  spatial.py
remash/utils/: logging.py
remash/world_model/: base.py  ensemble_model.py  graph_model.py  neural_model.py
scripts/: bench_neural.py  benchmark.py  discover_format.py  play.py  pretrain.py
weights/: pretrained.pt  pretrained_ep100.pt  pretrained_ep25.pt  pretrained_ep50.pt  pretrained_ep75.pt
